--- a/https2httpRedirect/config.yaml
+++ b/https2httpRedirect/config.yaml
@@ -1,3 +1,4 @@
+# https://developers.home-assistant.io/docs/add-ons/configuration#add-on-config
 name: "Redirect HTTPS to HTTP"
 description: "redirect HTTPS on port 443 to HTTP on port 80"
 version: "1.0.0"
@@ -10,3 +11,5 @@ arch:
   - i386
 ports:
   443/tcp: 443
+ports_description:
+  443/tcp: HTTPS/SSL Entrance port
